Use Tree from blueprintjs

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,7 @@
+@import url('https://rsms.me/inter/inter.css');
+
+$pt-font-family: 'Inter';
+
 @import "~@blueprintjs/core/src/blueprint.scss";
 @import "~react-reflex/styles.css";
+
