Fix an error with splitters

--- a/src/styles/reflex.scss
+++ b/src/styles/reflex.scss
@@ -126,6 +126,7 @@ body.row-resize {
   background-clip: padding-box;
   opacity: 0.2;
   z-index: 0;
+  background-color: #8A9BA8 !important;
 }
 
 .reflex-container > .reflex-splitter.reflex-thin.active
