--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import url('https://rsms.me/inter/inter.css');
+@import "~@fontsource/inter/index.css";
 
 @import "~@blueprintjs/core/src/common/_colors.scss";
 
