Improve colours for dark mode

--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -9,7 +9,7 @@
 
 .bp4-dark {
     .splitter-layout {
-        background-color: rgb(48, 64, 77);
+        background-color: #252A31; //rgb(48, 64, 77);
     }
 }
 
